
opam-version: "2.0"
maintainer: "Simon Grondin"
authors: [
  "Simon Grondin"
]
synopsis: "Extract Strings"
description: """
"""
license: "MPL-2.0"
tags: []
homepage: "https://github.com/okTurtles/strings"
doc: "https://github.com/okTurtles/strings"
bug-reports: "https://github.com/okTurtles/strings/issues"
pin-depends: [
  [ "angstrom-eio.0.15.0.custom" "git+https://github.com/SGrondin/angstrom.git#137d5ba2bb55f99b5278c11ab0c967669f2b998a" ]
  [ "angstrom.0.15.0.custom" "git+https://github.com/SGrondin/angstrom.git#137d5ba2bb55f99b5278c11ab0c967669f2b998a" ]
  [ "eio.0.11.custom" "git+https://github.com/SGrondin/eio.git#full-workpool" ]
  [ "eio_posix.0.11.custom" "git+https://github.com/SGrondin/eio.git#full-workpool" ]
  [ "eio_linux.0.11.custom" "git+https://github.com/SGrondin/eio.git#full-workpool" ]
  [ "eio_main.0.11.custom" "git+https://github.com/SGrondin/eio.git#full-workpool" ]
]
depends: [
  "ocaml" { = "5.0.0" }
  "ocaml-option-flambda"
  "dune" { >= "2.8.0"}

  "ocamlformat" { = "0.25.1" & with-test }
  "ocaml-lsp-server" { with-test }

  "eio_main" { = "0.11.custom" }

  "angstrom" { = "0.15.0.custom" }
  "angstrom-eio" { = "0.15.0.custom" }
  "core" { >= "v0.15.0" }
  "core_unix" { >= "v0.15.0" }
  "ppx_deriving"
  "ppx_deriving_yojson"
  "ppx_gen_rec"
  "sedlex"
  "stdlib-shims"
  "yojson"
  "uuidm"
  "wtf8"
  "SZXX" { >= "4.0.0" }
]
