
opam-version: "2.0"
maintainer: "Simon Grondin"
authors: [
  "Simon Grondin"
]
synopsis: "Extract Strings"
description: """
"""
license: "MPL-2.0"
tags: []
homepage: "https://github.com/okTurtles/strings"
doc: "https://github.com/okTurtles/strings"
bug-reports: "https://github.com/okTurtles/strings/issues"
pin-depends: [
  [ "angstrom-eio.0.15.0.custom" "git+https://github.com/SGrondin/angstrom.git#1a961940ffb746379b4bdc648bc194501b65348a" ]
  [ "angstrom.0.15.0.custom" "git+https://github.com/SGrondin/angstrom.git#1a961940ffb746379b4bdc648bc194501b65348a" ]
  [ "eio.0.12.custom" "git+https://github.com/SGrondin/eio.git#37e0dc0d98bd6c18506a974c3ce2b81e89be30a9" ]
  [ "eio_posix.0.12.custom" "git+https://github.com/SGrondin/eio.git#37e0dc0d98bd6c18506a974c3ce2b81e89be30a9" ]
  [ "eio_linux.0.12.custom" "git+https://github.com/SGrondin/eio.git#37e0dc0d98bd6c18506a974c3ce2b81e89be30a9" ]
  [ "eio_main.0.12.custom" "git+https://github.com/SGrondin/eio.git#37e0dc0d98bd6c18506a974c3ce2b81e89be30a9" ]
  [ "SZXX.4.0.1.custom" "git+https://github.com/asemio/SZXX.git#4.0.1" ]
]
depends: [
  "ocaml" { = "5.0.0" }
  "ocaml-option-flambda"
  "dune" { >= "2.8.0"}

  "ocamlformat" { = "0.25.1" & with-test }
  "ocaml-lsp-server" { with-test }

  "eio_main" { = "0.12.custom" }

  "angstrom" { = "0.15.0.custom" }
  "angstrom-eio" { = "0.15.0.custom" }
  "core" { >= "v0.15.0" }
  "core_unix" { >= "v0.15.0" }
  "ppx_deriving"
  "ppx_deriving_yojson"
  "ppx_gen_rec"
  "sedlex"
  "stdlib-shims"
  "yojson"
  "uuidm"
  "wtf8"
  "SZXX" { = "4.0.1.custom" }
]
