
opam-version: "2.0"
maintainer: "Simon Grondin"
authors: [
  "Simon Grondin"
]
synopsis: "Extract Strings"
description: """
"""
license: "MPL-2.0"
tags: []
homepage: "https://github.com/okTurtles/strings"
doc: "https://github.com/okTurtles/strings"
bug-reports: "https://github.com/okTurtles/strings/issues"
pin-depends: [
  [ "angstrom-eio.0.15.0.custom" "git+https://github.com/SGrondin/angstrom.git#1a961940ffb746379b4bdc648bc194501b65348a" ]
  [ "angstrom.0.15.0.custom" "git+https://github.com/SGrondin/angstrom.git#1a961940ffb746379b4bdc648bc194501b65348a" ]
  [ "eio.0.15.custom" "/Users/simongrondin/dev/eio" ]
  [ "eio_posix.0.15.custom" "/Users/simongrondin/dev/eio" ]
  [ "eio_linux.0.15.custom" "/Users/simongrondin/dev/eio" ]
  [ "eio_main.0.15.custom" "/Users/simongrondin/dev/eio" ]
]
depends: [
  "ocaml" { = "5.1.1" }
  "ocaml-option-flambda"
  "dune" { >= "2.8.0"}

  "ocamlformat" { = "0.25.1" & with-test }
  "ocaml-lsp-server" { with-test }

  "eio_main" { = "0.15.custom" }

  "angstrom" { = "0.15.0.custom" }
  "angstrom-eio" { = "0.15.0.custom" }
  "core" { >= "v0.16.0" }
  "core_unix" { >= "v0.16.0" }
  "ppx_deriving"
  "ppx_deriving_yojson"
  "ppx_gen_rec"
  "sedlex"
  "stdlib-shims"
  "yojson"
  "uuidm"
  "wtf8"
  "SZXX" { >= "4.1.0" }
]
