(executable
  (name strings)
  (libraries
    parsing
    utils

    stdlib-shims
    angstrom-lwt-unix
    core
    lwt
    lwt.unix
    lwt_ppx
    ppx_deriving_yojson.runtime
  )
  (preprocess (pps
    ppx_deriving_yojson
    ppx_sexp_conv
    lwt_ppx
  ))
  (modes exe)
  ;(ocamlopt_flags -O3 -unbox-closures)
)

(env
  (dev
    (flags (:standard -warn-error -A)))
)
