(executable
  (name strings)
  (libraries
    parsing
    quickjs
    utils

    stdlib-shims
    angstrom-lwt-unix
    core
    core_unix
    core_unix.command_unix
    lwt
    lwt.unix
    ppx_deriving_yojson.runtime
  )
  (preprocess (pps
    ppx_jane
    ppx_deriving_yojson
  ))
  (modes exe)
  (link_flags (:include link_flags.%{system}.dune))
)
