(library
  (name quickjs)
  (libraries
    utils

    core
    lwt
    lwt.unix
    uuidm
  )
  (preprocess (pps
    ppx_jane
  ))
  (foreign_stubs (language cxx) (names quickjs)
    (flags -std=c++17 -O3 -Wall -fPIC -I.
      -Xpreprocessor -fopenmp
    )
  )
  (c_library_flags (-lstdc++))
  (foreign_archives quickjs omp)
)

(rule
  (targets runtime.js)
  (deps parsers.js)
  (action (bash "
    DIR=\"$(pwd)\"
    cd %{project_root}/../../
    npx browserify src/quickjs/parsers.js > \"$DIR/runtime.js\"
  "))
  (mode standard)
)
(rule
  (targets runtime.h)
  (deps runtime.js)
  (action (bash "
    %{project_root}/../../quickjs/qjsc -c -o runtime.h runtime.js
  "))
  (mode standard)
)
(rule
  (targets quickjs.h)
  (action (bash "
    cp %{project_root}/../../quickjs/quickjs.h .
  "))
  (mode standard)
)
(rule
  (targets libquickjs.a)
  (action (bash "
    cp %{project_root}/../../quickjs/libquickjs.a .
  "))
  (mode standard)
)
(rule
  (targets libomp.a)
  (action (bash "
    cp /usr/local/Cellar/libomp/15.0.7/lib/libomp.a . &> /dev/null \
    || cp /usr/lib/libgomp.a libomp.a
  "))
  (mode standard)
)
