(library
  (name quickjs)
  (libraries
    utils

    core
    lwt
    lwt.unix
    uuidm
  )
  (preprocess (pps
    ppx_jane
  ))
  (foreign_stubs (language cxx) (names quickjs)
    (flags -std=c++17 -O3 -Wall -fPIC -I.
      -Xpreprocessor -fopenmp
    )
  )
  (c_library_flags (-lstdc++))
  (foreign_archives quickjs omp)
)

(rule
  (targets runtime.js)
  (deps parsers.js)
  (action (bash "
    DIR=\"$(pwd)\"
    cd %{project_root}/../../
    npx browserify src/quickjs/parsers.js > \"$DIR/runtime.js\"
  "))
  (mode standard)
)
(rule
  (targets runtime.h)
  (deps runtime.js)
  (action (bash "
    %{project_root}/../../quickjs/qjsc -c -o runtime.h runtime.js
  "))
  (mode standard)
)
(rule
  (targets quickjs.h)
  (action (bash "
    cp %{project_root}/../../quickjs/quickjs.h .
  "))
  (mode standard)
)
(rule
  (targets libquickjs.a)
  (action (bash "
    cp %{project_root}/../../quickjs/libquickjs.a .
  "))
  (mode standard)
)
(rule
  (targets libomp.a)
  (action (bash "
    OUT=\"libomp.a\"
    PAWTHS=\"
      /usr/local/Cellar/libomp/17.0.6/lib/libomp.a
      /opt/homebrew/Cellar/libomp/20.1.6/lib/libomp.a
      /usr/lib/x86_64-linux-gnu/libomp.a
      /usr/lib/x86_64-linux-gnu/libgomp.a
      /usr/lib/libgomp.a
      /usr/lib/gcc/x86_64-linux-gnu/*/libgomp.a
      /usr/lib/gcc/aarch64-redhat-linux/*/libgomp.a
    \"
    for p in $PAWTHS; do
      for matched_path in $p; do
        if [ -f \"$matched_path\" ]; then
          cp \"$matched_path\" \"$OUT\"
          exit 0
        fi
      done
    done
    echo \"Error: Could not find libomp.a or libgomp.a\" >&2
    exit 1
  "))
  (mode standard)
)
